update html/css/js data

--- a/MS3/Implementation/Dienstnutzer/html/homepage.html
+++ b/MS3/Implementation/Dienstnutzer/html/homepage.html
@@ -7,14 +7,17 @@
     <title>Autorenplattform</title>
   </head>
   <body>
+    <script>
+      window.onload = loadTrends();
+    </script>
     <header>
       <img id="logoPicture" src="../images/Pursuit Knowledge.png" alt="Logo">
       <a href="homepage.html">Autorenplattform</a>
       <input type="text" name="searchbar" placeholder="Suche">
       <nav>
-        <a href="www.google.de">Mein Konto</a>
-        <a href="www.google.de">Meine Bibliothek</a>
-        <a href="www.google.de">Warenkorb</a>
+        <a href="index.html">Mein Konto</a>
+        <a href="index.html">Meine Bibliothek</a>
+        <a href="index.html">Warenkorb</a>
       </nav>
     </header>
     <main>
