--- a/MS3/Implementation/Dienstnutzer/html/login.html
+++ b/MS3/Implementation/Dienstnutzer/html/login.html
@@ -13,6 +13,6 @@
         <p><input type="password" id="password" name="pw" size="20" maxlength="20" placeholder="Passwort"></p>
         <button type="button" id="loginStart" onclick="login()">Bestätigen</button>
       </form>
-      <h5>Noch kein Konto? Dann können Sie sich hier registieren: <a href="https://www.google.com" title="Konto erstellen">Registrieren</a></h6>
+      <h5>Noch kein Konto? Dann können Sie sich hier registieren: <a href="index.html" title="Konto erstellen">Registrieren</a></h6>
   </body>
 </html>
